cabal-version: 3.0
name: wireform-attoparsec
version: 0.1.0.0
synopsis: Attoparsec adapter for wireform ChunkParser
license: BSD-3-Clause
author: Ian Duncan
maintainer: ian@iankduncan.com

library
  default-language: GHC2021
  hs-source-dirs: src
  exposed-modules: Wireform.Parser.Adapter.Attoparsec
  build-depends:
    base >= 4.17 && < 5,
    bytestring,
    attoparsec >= 0.14 && < 0.15,
    wireform-core
