cabal-version: 3.0
name: wireform-avro
version: 0.1.0.0
synopsis: Apache Avro schema resolution, JSON conversion, and protocol/IPC
license: BSD-3-Clause
build-type: Simple

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Avro.Class
    Avro.CodeGen
    Avro.Container
    Avro.Decode
    Avro.Encode
    Avro.Fingerprint
    Avro.IDL
    Avro.IDLConvert
    Avro.JSON
    Avro.Protocol
    Avro.QQ
    Avro.Registry
    Avro.Resolution
    Avro.Schema
    Avro.Schema.Parse
    Avro.Value
    Avro.Wire
  build-depends:
    base >= 4.16 && < 5,
    wireform-core,
    bytestring >= 0.11 && < 0.13,
    containers >= 0.6 && < 0.8,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    megaparsec >= 9.0 && < 10,
    aeson >= 2.1 && < 2.3,
    scientific >= 0.3 && < 0.4,
    hashable >= 1.3 && < 1.6,
    unordered-containers >= 0.2.16 && < 0.3,
    template-haskell >= 2.18 && < 2.24,
    prettyprinter >= 1.7 && < 1.8,
    cryptohash-md5 >= 0.11 && < 0.12,
    zlib >= 0.6 && < 0.8,
    deepseq >= 1.4 && < 1.6
