cabal-version: 3.0
name: wireform-bencode
version: 0.1.0.0
synopsis: Bencode encoding/decoding
license: BSD-3-Clause
license-file: LICENSE
author: Ian Duncan
maintainer: ian@iankduncan.com
copyright: 2026 Ian Duncan
build-type: Simple

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Bencode.Class
    Bencode.Decode
    Bencode.Derive
    Bencode.Encode
    Bencode.Encoding
    Bencode.Value
  build-depends:
    base >= 4.16 && < 5,
    wireform-core,
    wireform-derive,
    bytestring >= 0.11 && < 0.13,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    containers >= 0.6 && < 0.8,
    deepseq >= 1.4 && < 1.6,
    template-haskell >= 2.18 && < 2.24

test-suite wireform-bencode-derive-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.Bencode.Derive
    Test.Bencode.Derive.Types
    Test.Bencode.Derive.Instances
  default-extensions:
    ScopedTypeVariables
    TemplateHaskell
  build-depends:
    base,
    wireform-bencode,
    wireform-derive,
    text,
    vector,
    tasty,
    tasty-hunit
