cabal-version: 3.0
name: wireform-bson
version: 0.1.0.0
synopsis: BSON (MongoDB wire format) encoding/decoding
license: BSD-3-Clause
build-type: Simple

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    BSON.Class
    BSON.Decode
    BSON.Derive
    BSON.Encode
    BSON.Encoding
    BSON.Value
  build-depends:
    base >= 4.16 && < 5,
    wireform-core,
    wireform-derive,
    bytestring >= 0.11 && < 0.13,
    base64-bytestring >= 1.2 && < 1.3,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    containers >= 0.6 && < 0.8,
    deepseq >= 1.4 && < 1.6,
    scientific >= 0.3 && < 0.4,
    template-haskell >= 2.18 && < 2.24,
    aeson >= 2.1 && < 2.3

test-suite wireform-bson-derive-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.BSON.Derive
    Test.BSON.Derive.Types
    Test.BSON.Derive.Instances
  default-extensions:
    ScopedTypeVariables
    TemplateHaskell
  build-depends:
    base,
    wireform-bson,
    wireform-derive,
    text,
    vector,
    tasty,
    tasty-hunit
