cabal-version: 3.0
name: wireform-capnproto
version: 0.1.0.0
synopsis: Cap'n Proto zero-copy serialization
license: BSD-3-Clause
license-file: LICENSE
author: Ian Duncan
maintainer: ian@iankduncan.com
copyright: 2026 Ian Duncan
build-type: Simple

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    CapnProto.CodeGen
    CapnProto.Decode
    CapnProto.Derive
    CapnProto.Encode
    CapnProto.Parser
    CapnProto.QQ
    CapnProto.Registry
    CapnProto.Schema
    CapnProto.Value
  build-depends:
    base >= 4.16 && < 5,
    wireform-core,
    wireform-derive,
    bytestring >= 0.11 && < 0.13,
    base64-bytestring >= 1.2 && < 1.3,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    containers >= 0.6 && < 0.8,
    megaparsec >= 9.0 && < 10,
    template-haskell >= 2.18 && < 2.24,
    prettyprinter >= 1.7 && < 1.8,
    hashable >= 1.3 && < 1.6,
    unordered-containers >= 0.2.16 && < 0.3,
    deepseq >= 1.4 && < 1.6,
    scientific >= 0.3 && < 0.4,
    aeson >= 2.1 && < 2.3

test-suite wireform-capnproto-derive-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.CapnProto.Derive
    Test.CapnProto.Derive.Types
    Test.CapnProto.Derive.Instances
  default-extensions:
    ScopedTypeVariables
    TemplateHaskell
  build-depends:
    base,
    wireform-capnproto,
    wireform-derive,
    bytestring,
    text,
    vector,
    tasty,
    tasty-hunit
