cabal-version: 3.0
name: wireform-cbor
version: 0.1.0.0
synopsis: CBOR (RFC 7049) values, encoding/decoding, JSON bridge, and CDDL
license: BSD-3-Clause
license-file: LICENSE
author: Ian Duncan
maintainer: ian@iankduncan.com
copyright: 2026 Ian Duncan
build-type: Simple

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    CBOR.CDDL
    CBOR.CDDLCodeGen
    CBOR.CDDLSchema
    CBOR.Class
    CBOR.Decode
    CBOR.Derive
    CBOR.Diagnostic
    CBOR.Encode
    CBOR.Encoding
    CBOR.JSON
    CBOR.QQ
    CBOR.Stream
    CBOR.TagRegistry
    CBOR.Value
  build-depends:
    base >= 4.16 && < 5,
    wireform-core,
    wireform-derive,
    bytestring >= 0.11 && < 0.13,
    containers >= 0.6 && < 0.9,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    megaparsec >= 9.0 && < 10,
    aeson >= 2.1 && < 2.3,
    scientific >= 0.3 && < 0.4,
    hashable >= 1.3 && < 1.6,
    unordered-containers >= 0.2.16 && < 0.3,
    template-haskell >= 2.18 && < 2.25,
    prettyprinter >= 1.7 && < 1.8,
    base16-bytestring >= 1.0 && < 1.1,
    base64-bytestring >= 1.2 && < 1.3,
    deepseq >= 1.4 && < 1.6

test-suite wireform-cbor-derive-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.CBOR.Derive
    Test.CBOR.Derive.Types
    Test.CBOR.Derive.Instances
  default-extensions:
    ScopedTypeVariables
    TemplateHaskell
  build-depends:
    base,
    wireform-cbor,
    wireform-derive,
    text,
    vector,
    sydtest
