cabal-version: 3.0
name: wireform-cereal
version: 0.1.0.0
synopsis: cereal adapter for wireform ChunkParser
license: BSD-3-Clause
author: Ian Duncan
maintainer: ian@iankduncan.com

library
  default-language: GHC2021
  hs-source-dirs: src
  exposed-modules: Wireform.Parser.Adapter.Cereal
  build-depends:
    base >= 4.18 && < 5,
    bytestring,
    cereal >= 0.5 && < 0.6,
    wireform-core
