cabal-version: 3.0
name: wireform-columnar
version: 0.1.0.0
synopsis: SIMD-accelerated columnar primitives (bit-unpacking, etc.)
license: BSD-3-Clause
license-file: LICENSE
author: Ian Duncan
maintainer: ian@iankduncan.com
copyright: 2026 Ian Duncan
build-type: Simple

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Columnar.IO
    Columnar.LZ4
    Columnar.Predicate
    Columnar.SIMD
    Columnar.Stream
  c-sources: cbits/columnar_simd.c
  include-dirs: ../wireform-core/include/simde
  cc-options: -O3 -march=native
  -- liblz4 is the system C library that backs Columnar.LZ4.
  -- On Debian / Ubuntu install with `apt install liblz4-dev`;
  -- on macOS `brew install lz4`. The library is light enough
  -- (< 100 KiB) that we don't gate it behind a Cabal flag —
  -- if it's missing the link will fail with a clear "cannot
  -- find -llz4" message.
  extra-libraries: lz4
  build-depends:
    base >= 4.16 && < 5,
    async >= 2.2 && < 2.3,
    bytestring >= 0.11 && < 0.13,
    directory >= 1.3 && < 1.4,
    mmap >= 0.5 && < 0.6,
    stm >= 2.5 && < 2.6,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    primitive >= 0.7 && < 0.10

test-suite wireform-columnar-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base >= 4.16 && < 5,
    wireform-columnar,
    bytestring >= 0.11 && < 0.13,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    hedgehog >= 1.4 && < 1.6,
    tasty >= 1.4 && < 1.6,
    tasty-hedgehog >= 1.4 && < 1.5,
    tasty-hunit >= 0.10 && < 0.11,
    temporary >= 1.3 && < 1.4
