cabal-version: 3.0
name: wireform-columnar
version: 0.1.0.0
synopsis: Unified columnar API across Arrow, Parquet, and ORC
description:
  A single Arrow-shaped API that encodes and decodes column batches
  in Apache Arrow IPC, Parquet, or ORC. Pick a format, pass a schema
  and batches, get bytes out or in. Includes projection, predicate
  pushdown, multi-file dataset iteration, and record-level helpers.
homepage: https://github.com/iand675/wireform-
bug-reports: https://github.com/iand675/wireform-/issues
license: BSD-3-Clause
license-file: LICENSE
author: Ian Duncan
maintainer: ian@iankduncan.com
copyright: 2026 Ian Duncan
category: Data, Codec, Serialization
build-type: Simple
tested-with: GHC == 9.6.4, GHC == 9.8.4

source-repository head
  type:     git
  location: https://github.com/iand675/wireform-

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Wireform.Columnar
  build-depends:
      base                >= 4.16 && < 5
    , wireform-columnar-core
    , wireform-arrow
    , wireform-parquet
    , wireform-orc
    , bytestring
    , text
    , vector
