cabal-version: 3.0
name: wireform-core
version: 0.1.0.0
synopsis: Shared FFI primitives for wireform format packages
license: BSD-3-Clause
build-type: Simple

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Wireform.FFI
    Wireform.Encode.Direct
    Wireform.Hash
  c-sources: cbits/fast_decode.c
             cbits/wireform_hash_simd.c
  include-dirs: include/simde
  cc-options: -O3
  build-depends:
    base >= 4.16 && < 5,
    bytestring >= 0.11 && < 0.13,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14
