cabal-version: 3.0
name: wireform-csv
version: 0.1.0.0
synopsis: CSV/TSV encoding/decoding
license: BSD-3-Clause
build-type: Simple

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    CSV.Class
    CSV.Decode
    CSV.Encode
    CSV.Value
  build-depends:
    base >= 4.16 && < 5,
    -- wireform-xml ships the SIMD cbits that CSV.Decode's
    -- hs_xml_find_byte foreign-import looks up at link time.
    -- Pulling the dep in keeps the shared-object symbol
    -- resolvable in ghci / TH splices.
    wireform-xml,
    bytestring >= 0.11 && < 0.13,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    containers >= 0.6 && < 0.8,
    deepseq >= 1.4 && < 1.6
