cabal-version: 3.0
name: wireform-delta
version: 0.0.1.0
synopsis: Delta Lake transaction-log + Parquet reader (skeleton)
license: BSD-3-Clause
build-type: Simple

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Delta.Log
  build-depends:
    base >= 4.16 && < 5,
    aeson >= 2.0 && < 2.3,
    bytestring >= 0.11 && < 0.13,
    containers >= 0.6 && < 0.8,
    scientific >= 0.3 && < 0.4,
    text >= 2.0 && < 2.2,
    unordered-containers >= 0.2.16 && < 0.3,
    vector >= 0.13 && < 0.14,
    wireform-columnar,
    wireform-parquet

test-suite delta-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O0
  build-depends:
    base >= 4.16 && < 5,
    aeson,
    bytestring,
    containers,
    unordered-containers,
    wireform-delta,
    tasty       >= 1.4  && < 1.6,
    tasty-hunit >= 0.10 && < 0.11
